--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,9 @@
       <ul class="nav navbar-nav navbar-right">
 	<li><%= link_to "Home", root_path %></li>
 	<li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Datasets", datasets_path %></li>
+        <li><%= link_to "Algorithms", algorithms_path %></li>
+        <li><%= link_to "Evaluation", '#' %></li>
         <% if logged_in? %>
             <li><%= link_to "Users", users_path %></li>
             <li class="dropdown">
