created basic algorithm view and added file uploading for datasets

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -111,3 +111,11 @@ input {
 .image_thumbnail {
     margin-top: 10px;
 }
+
+/* algorithms */
+
+.algorithm_listing {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-top: 1px solid #e8e8e8;
+}
