--- a/app/views/main_pages/help.html.erb
+++ b/app/views/main_pages/help.html.erb
@@ -1,2 +1,2 @@
-<h1>MainPages#help</h1>
-<p>Find me in app/views/main_pages/help.html.erb</p>
+<h1>Help</h1>
+<p>This is where users could go for help about the site!</p>
