--- a/app/views/algorithms/index.html.erb
+++ b/app/views/algorithms/index.html.erb
@@ -1,10 +1,12 @@
 <div class="row">
-    <div class="col-md-6 col-md-3-offset">
+    <div class="col-md-8">
         <% if @algorithms.any? %>
             <h3>Algorithms (<%= @algorithms.count %>)</h3>
-            <hr>
+            <ol class="algorithms">
+                <%= render @algorithms %>
+            </ol>
         <% else %>
-            <h3>No algorithms available</h3>
+            <h3> No Algorithms Available </h3>
         <% end %>
     </div>
 </div>
