--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -8,5 +8,9 @@
         <% else %>
             <h3> No Datasets Available </h3>
         <% end %>
+        <hr/>
+    </div>
+    <div class="col-md-3 col-md-offset-3" style="margin-top: 25px">
+        <%= button_to "Create new datset", "/datasets/new", :class => "btn btn-primary", :method => :get %>
     </div>
 </div>
