New images for home page

--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,25 +1,24 @@
 <section style="overflow: hidden">
   <div class="center jumbotron">
-    <h1>Yadda Yadda</h1>
-    <p>This is a great explanation of some super cool stuff</p>
+    <h1>App Info</h1>
+    <p>This can explain the goal of the website</p>
     <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a><p>
   </div>
   <div class="row">
     <div class="col-md-4">
-      <%= image_tag("ExampleImage.jpg", alt: "Example Image", class: "img-responsive") %>
+      <%= image_tag("ExampleDataset.PNG", alt: "Example Dataset Image", class: "img-responsive") %>
       <h3><%= link_to "Download Datasets", datasets_path %></h3>
       <h5>More information</h5>
     </div>
     <div class="col-md-4">
-      <%= image_tag("ExampleImage.jpg", alt: "Example Image", class: "img-responsive") %>
+      <%= image_tag("ExampleEvaluation.PNG", alt: "Example Evaluation Image", class: "img-responsive") %>
       <h3><%= link_to "Evaluate Segmentations", '#' %></h3>
       <h5>More information</h5>
     </div>
     <div class="col-md-4">
-      <%= image_tag("ExampleImage.jpg", alt: "Example Image", class: "img-responsive") %>
+      <%= image_tag("ExampleImage.jpg", alt: "Example Comparison Image", class: "img-responsive") %>
       <h3><%= link_to "Compare Algorithms", algorithms_path %> </h3>
       <h5>More information</h5>
     </div>
   </div>
 </section>
-
