--- a/app/views/datasets/new.html.erb
+++ b/app/views/datasets/new.html.erb
@@ -2,46 +2,47 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_for(@dataset) do |f| %>
+            <%= render 'shared/error_messages', object: @dataset %>
             <div class="form-group">
                 <%= f.label :name, class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.text_field :name %>
+                    <%= f.text_field :name, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
                 <%= f.label :description, class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.text_field :description %>
+                    <%= f.text_field :description, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
                 <%= f.label :height, class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.number_field(:height) %>
+                    <%= f.number_field :height, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
                 <%= f.label :width, class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.number_field(:width) %>
+                    <%= f.number_field :width, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
                 <%= f.label :frames, class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.number_field(:frames) %>
+                    <%= f.number_field :frames, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
-                <%= f.label :file, class: "col-sm-4 control-label" %>
+                <%= f.label :image_file, "File", class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.file_field :file %>
+                    <%= f.file_field :image_file, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
-                <%= f.label :ground_truth, class: "col-sm-4 control-label" %>
+                <%= f.label :ground_truth_file, "Ground Truth", class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.file_field :ground_truth %>
+                    <%= f.file_field :ground_truth_file, class: 'form-control' %>
                 </div>
             </div>
             <%= f.submit "Create new dataset", class: "btn btn-primary" %>
