--- a/app/views/datasets/new.html.erb
+++ b/app/views/datasets/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create a new dataset</h1>
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <%= form_for(@dataset) do |f| %>
+        <%= form_for @dataset, :html => {:multipart => true} do |f| %>
             <%= render 'shared/error_messages', object: @dataset %>
             <div class="form-group">
                 <%= f.label :name, class: "col-sm-4 control-label" %>
@@ -34,15 +34,15 @@
                 </div>
             </div>
             <div class="form-group">
-                <%= f.label :image_file, "File", class: "col-sm-4 control-label" %>
+                <%= label :image_file, "File", class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.file_field :image_file, class: 'form-control' %>
+                    <%= file_field_tag :image_file, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
-                <%= f.label :ground_truth_file, "Ground Truth", class: "col-sm-4 control-label" %>
+                <%= label :ground_truth_file, "Ground Truth", class: "col-sm-4 control-label" %>
                 <div class="col-sm-8">
-                    <%= f.file_field :ground_truth_file, class: 'form-control' %>
+                    <%= file_field_tag :ground_truth_file, class: 'form-control' %>
                 </div>
             </div>
             <%= f.submit "Create new dataset", class: "btn btn-primary" %>
