--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -14,7 +14,7 @@
         <h4>Upload date:</h4>
         <%= @dataset.created_at.strftime("%d %b. %Y")%>
         <h4>Download:</h4>
-        <%= link_to("#{@dataset.name} zip", {:controller => params[:controller], :action => "download", :dataset_id => @dataset.id}, 'data-no-turbolink' => true) %>
+        <%= link_to("#{@dataset.name} zip", {:controller => :datasets, :action => "download", :dataset_id => @dataset.id}, 'data-no-turbolink' => true) %>
         <h4>Total number of downloads:</h4>
         <%= @dataset.download_num%>
     </div>
@@ -49,6 +49,7 @@
     <h2 class="dataset_heading">Evaluate an algorithm on this dataset</h2>
     <div class="col-md-6">
         <%= form_for @result, :html => {:class => "form-horizontal"} do |f| %>
+            <%= render 'shared/error_messages', object: @result %>
             <div class="form-group">
                 <%= f.label :algorithm_id, class: "col-sm-2 control-label" %>
                 <div class="col-sm-10">
