Fixed if statements for checking if hausdorff/dice was selected for evaluation and added N/A option for displaying results on dataset show page

--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -39,8 +39,16 @@
                 <% @current_results.each do |result| %>
                     <tr>
                         <td><%= link_to result.algorithm.name, algorithm_path(result.algorithm) %></td>
-                        <td><%= result.hausdorff %></td>
-                        <td><%= result.dice %></td>
+                        <% if result.hausdorff != -1 %>
+                            <td><%= result.hausdorff %></td>
+                        <% else %>
+                            <td>N/A</td>
+                        <% end %>
+                        <% if result.dice != -1 %>
+                            <td><%= result.dice %></td>
+                        <% else %>
+                            <td>N/A</td>
+                        <% end %>
                         <td><%= result.created_at %></td>
                     </tr>
                 <% end %>
