Updated the user show page to list algorithms and results. Created a result partial and fixed displaying -1 issue for metrics

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -127,3 +127,9 @@ input {
     margin-bottom: 20px;
     border-top: 1px solid #e8e8e8;
 }
+
+.result_listing {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-top: 1px solid #e8e8e8;
+}
