Added algorithm and result display to user page and button to create new algorithm

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,29 +16,39 @@
 	    </div>
         </div>
     </div>
-    <div class="col-md-6">    
-        <% if @user.datasets.any? %>
-            <h3>Submitted Datasets (<%= @user.datasets.count %>)</h3>
-            <ol class="datasets">
-                <%= render @datasets %>
-            </ol>
-        <% end %>
-        <hr/>
-        <% if @user.algorithms.any? %>
-            <h3>Submitted Algorithms (<%= @user.algorithms.count %>)</h3>
-            <ol class="algorithms">
-                <%= render @algorithms %>
-            </ol>
-        <% end %>
-        <hr/>
-        <% if @results.any? %>
-            <h3>Submitted Results (<%= @results.count %>)</h3>
-            <ol class="results">
-                <%= render @results %>
-            </ol>
-        <% end %>
-        <div class="col-md-6 col-md-offset-3">
-             <%= button_to "Create new datset", "/datasets/new", :class => "btn btn-primary", :method => :get %>
+    <div class="col-md-6">
+        <div class="col-md-12">
+            <% if @user.datasets.any? %>
+                <h3>Submitted Datasets (<%= @user.datasets.count %>)</h3>
+                <ol class="datasets">
+                    <%= render @datasets %>
+                </ol>
+            <% end %>
+
+            <div class="col-md-6 col-md-offset-3">
+                <%= button_to "Create new datset", "/datasets/new", :class => "btn btn-primary", :method => :get %>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <hr/>
+            <% if @user.algorithms.any? %>
+                <h3>Submitted Algorithms (<%= @user.algorithms.count %>)</h3>
+                <ol class="algorithms">
+                    <%= render @algorithms %>
+                </ol>
+            <% end %>
+            <div class="col-md-6 col-md-offset-3">
+                <%= button_to "Create new algorithm", "/algorithms/new", :class => "btn btn-primary", :method => :get %>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <hr/>
+            <% if @results.any? %>
+                <h3>Submitted Results (<%= @results.count %>)</h3>
+                <ol class="results">
+                    <%= render @results %>
+                </ol>
+            <% end %>
         </div>
     </div>
 </div>
