--- a/app/views/algorithms/new.html.erb
+++ b/app/views/algorithms/new.html.erb
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_for @algorithm, :multipart => true, :html => {:class => "form-horizontal"} do |f| %>
+            <%= render 'shared/error_messages', object: @algorithm %>
             <div class="form-group">
                 <%= f.label :name, class: "col-sm-2 control-label" %>
                 <div class="col-sm-10">
@@ -12,18 +13,6 @@
                 <%= f.label :description, class: "col-sm-2 control-label" %>
                 <div class="col-sm-10">
                     <%= f.text_area :description %>
-                </div>
-            </div>
-            <div class="form-group">
-                <%= f.label :code, class: "col-sm-2 control-label" %>
-                <div class="col-sm-10">
-                    <%= f.text_area :code, placeholder: "Enter you code here..." %>
-                </div>
-            </div>
-            <div class="form-group">
-                <%= f.label :filetype, class: "col-sm-2 control-label" %>
-                <div class="col-sm-10">
-                    <%= f.text_field :filetype %>
                 </div>
             </div>
             <div class="form-group">
