--- a/app/views/algorithms/index.html.erb
+++ b/app/views/algorithms/index.html.erb
@@ -8,8 +8,9 @@
         <% else %>
             <h3> No Algorithms Available </h3>
         <% end %>
-        <div class="col-md-3 col-md-offset-3" style="margin-top: 25px">
-            <%= button_to "Add new algorithm", "/algorithms/new", :class => "btn btn-primary", :method => :get %>
-        </div>        
+        <hr/>
     </div>
+    <div class="col-md-3 col-md-offset-3">
+        <%= button_to "Add new algorithm", "/algorithms/new", :class => "btn btn-primary", :method => :get %>
+    </div>        
 </div>
