--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <ul class="users">
     <% @users.each do |user| %>
         <li>
-            <%= "#{user.name} <#{user.email}>" %>
+            <%= "#{user.first_name} #{user.last_name} <#{user.email}>" %>
         </li>
     <% end %>
 </ul>
