--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,8 +3,10 @@
     <div class="col-md-6 col-md-offset-3">
 	<%= form_for(@user) do |f| %>
             <%= render 'shared/error_messages', object: @user %>
-	    <%= f.label :name %>
-	    <%= f.text_field :name %>
+	    <%= f.label :first_name %>
+	    <%= f.text_field :first_name %>
+            <%= f.label :last_name %>
+            <%= f.text_field :last_name %>
 	    <%= f.label :email %>
 	    <%= f.email_field :email %>
 	    <%= f.label :password %>
