--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,12 +3,12 @@
         <div class="panel panel-default profile_panel">
 	    <div class="panel-heading">
 	        <h4 class="text-center">
-		    <%= @user.name %>
+		    <%= "#{@user.first_name} #{@user.last_name}" %>
 	        </h4>
 	    </div>
 	    <div class="panel-body">
 	        <hr>
-	        <p><strong>Name: </strong><%= @user.name %></p>
+	        <p><strong>Name: </strong><%= "#{@user.first_name} #{@user.last_name}" %></p>
 	        <hr>
 	        <p><strong>Email: </strong><%= @user.email %></p>
 	        <hr>
