--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -59,5 +59,11 @@
                 <h3>No Public Results</h3>
             <% end %>
         </div>
+        <% if current_user.admin? && !current_user?(@user) %>
+            <div class="col-md-12">
+                <hr/>
+                <%= button_to "delete", @user, method: :delete %>
+            </div>
+        <% end %>
     </div>
 </div>
