--- a/app/views/algorithms/show.html.erb
+++ b/app/views/algorithms/show.html.erb
@@ -8,8 +8,7 @@
         <p><%= @algorithm.description %></p>
         <h4>Owner:</h4>
         <p><%= link_to "#{@algorithm.user.first_name} #{@algorithm.user.last_name}", user_path(@algorithm.user) %></p>
-    </div>
-    <div class="col-md-8">
-        <%= highlight_code @algorithm %>
+        <h4>Source code url:</h4>
+        <p><%= @algorithm.source_code_url %>
     </div>
 </div>
