Changed filetype to programming language and adjusted algorithm views

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -89,6 +89,11 @@ input {
     height: auto !important;
 }
 
+label.required:after {
+    content: " *";
+    color: red;
+}
+
 #error_explanation {
     color: red;
     ul {
