--- a/app/views/algorithms/new.html.erb
+++ b/app/views/algorithms/new.html.erb
@@ -1,35 +1,34 @@
-<h1>Create a new algorithm</h1>
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
+        <h1>Create a new algorithm</h1>
+        <p class="help-block"><span style="color:red">*</span> denotes a required field</p>
+        <br/>
         <%= form_for @algorithm, :multipart => true do |f| %>
             <%= render 'shared/error_messages', object: @algorithm %>
             <div class="form-group">
-                <%= f.label :name, class: "col-sm-2 control-label" %>
-                <div class="col-sm-10">
+                <%= f.label :name, class: "col-sm-3 control-label required" %>
+                <div class="col-sm-9">
                     <%= f.text_field :name, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
-                <%= f.label :description, class: "col-sm-2 control-label" %>
-                <div class="col-sm-10">
+                <%= f.label :description, class: "col-sm-3 control-label required" %>
+                <div class="col-sm-9">
                     <%= f.text_area :description, class: 'form-control' %>
                 </div>
             </div>
             <div class="form-group">
-                <%= f.label :source_code_url, class: "col-sm-2 control-label" %>
-                <div class="col-sm-10">
+                <%= f.label :programming_language, class: "col-sm-3 control-label required" %>
+                <div class="col-sm-9">
+                    <%= f.text_field :programming_language, class: 'form-control' %>
+                </div>
+            </div>            
+            <div class="form-group">
+                <%= f.label :source_code_url, class: "col-sm-3 control-label required" %>
+                <div class="col-sm-9">
                     <%= f.text_field :source_code_url, class: 'form-control' %>
                 </div>
             </div>
-            <!-- 
-            <div class="form-group">
-                <%= f.label :filename, class: "col-sm-2 control-label" %>
-                <div class="col-sm-10">
-                    <%= f.file_field :filename, class: 'form-control' %>
-                    <p class="help-block">Upload the file with a proper extension type</p>
-                </div>
-            </div>
-             -->
             <%= f.submit "Create", class: "btn btn-primary" %>
         <% end %>
     </div>
