--- a/app/views/algorithms/show.html.erb
+++ b/app/views/algorithms/show.html.erb
@@ -8,7 +8,9 @@
         <p><%= @algorithm.description %></p>
         <h4>Owner:</h4>
         <p><%= link_to "#{@algorithm.user.first_name} #{@algorithm.user.last_name}", user_path(@algorithm.user) %></p>
+        <h4>Programming Language:</h4>
+        <p><%= @algorithm.programming_language %>
         <h4>Source code url:</h4>
-        <p><%= @algorithm.source_code_url %>
+        <p><%= link_to @algorithm.source_code_url, @algorithm.full_url %>
     </div>
 </div>
