--- a/app/views/datasets/new.html.erb
+++ b/app/views/datasets/new.html.erb
@@ -27,6 +27,12 @@
                     <%= f.file_field :ground_truth, class: 'form-control' %>
                 </div>
             </div>
+            <div class="form-group">
+                <%= f.label :config_file, class: "col-sm-4 control-label" %>
+                <div class="col-sm-8">
+                    <%= f.file_field :config_file, class: 'form-control' %>
+                </div>
+            </div>            
             <%= f.submit "Create new dataset", class: "btn btn-primary" %>
         <% end %>
     </div>
