--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,16 +3,36 @@
     <div class="col-md-6 col-md-offset-3">
 	<%= form_for(@user) do |f| %>
             <%= render 'shared/error_messages', object: @user %>
-	    <%= f.label :first_name %>
-	    <%= f.text_field :first_name %>
-            <%= f.label :last_name %>
-            <%= f.text_field :last_name %>
-	    <%= f.label :email %>
-	    <%= f.email_field :email %>
-	    <%= f.label :password %>
-	    <%= f.password_field :password %>
-	    <%= f.label :password_confirmation, "Confirmation" %>
-	    <%= f.password_field :password_confirmation %>
+            <div class="form-group">
+	        <%= f.label :first_name, class: "control-label" %>
+                <div>
+	            <%= f.text_field :first_name, class: "form-control" %>
+                </div>
+            </div>
+            <div class="form-group">
+                <%= f.label :last_name, class: "control-label" %>
+                <div>
+                    <%= f.text_field :last_name, class: "form-control" %>
+                </div>
+            </div>
+            <div class="form-group">
+	        <%= f.label :email, class: "control-label" %>
+                <div>
+	            <%= f.email_field :email, class: "form-control" %>
+                </div>
+            </div>
+            <div class="form-group">
+	        <%= f.label :password, class: "control-label" %>
+                <div>
+	            <%= f.password_field :password, class: "form-control" %>
+                </div>
+            </div>
+            <div class="form-group">
+	        <%= f.label :password_confirmation, "Confirmation", class: "control-label" %>
+                <div>
+	            <%= f.password_field :password_confirmation, class: "form-control" %>
+                </div>
+            </div>
 	    <%= f.submit "Create my account", class: "btn btn-primary" %>
 	<% end %>
     </div>
